add carets to tabs

--- a/payment.html
+++ b/payment.html
@@ -72,13 +72,13 @@
               <h4>Payment options:</h4>
                 <ul class="nav nav-tabs" id="payment-options" role="tablist">
                   <li class="nav-item">
-                    <a class="nav-link active btn-red" id="visa-mc-tab" data-toggle="tab" href="#visa-mc" role="tab" aria-controls="visa-mc" aria-selected="true">Visa / MC</a>
+                    <a class="nav-link active btn-red" id="visa-mc-tab" data-toggle="tab" href="#visa-mc" role="tab" aria-controls="visa-mc" aria-selected="true">Visa / MC<span class="dropdown-toggle"></span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link btn-red" id="paypal-tab" data-toggle="tab" href="#paypal" role="tab" aria-controls="paypal" aria-selected="false">PayPal</a>
+                    <a class="nav-link btn-red" id="paypal-tab" data-toggle="tab" href="#paypal" role="tab" aria-controls="paypal" aria-selected="false">PayPal<span class="dropdown-toggle"></span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link btn-red" id="access-code-tab" data-toggle="tab" href="#access-code" role="tab" aria-controls="access-code" aria-selected="false">Access Code</a>
+                    <a class="nav-link btn-red" id="access-code-tab" data-toggle="tab" href="#access-code" role="tab" aria-controls="access-code" aria-selected="false">Access Code<span class="dropdown-toggle"></span></a>
                   </li>
                 </ul>
 
