--- a/webinar-onsite.html
+++ b/webinar-onsite.html
@@ -41,7 +41,7 @@
           </div>
         </div>
       </header>
-      <div class="container flex-col-start-center card-container tall odor-school" role="main">
+      <div class="container flex-col-start-center card-container card-tall odor-school" role="main">
         <div class="card card-course-detail">
           <div class="card-header flex-row-spacearound-center">
               Welcome to St. Croix Sensory, Inc. Training
