create hover-white-show-caret. add to payment page

--- a/payment.html
+++ b/payment.html
@@ -35,7 +35,7 @@
               <span class="welcome">Welcome, Ann Learner</span>
               <button type="button" class="btn btn-red btn-student-center">Student Center</button>
               <div class="dropdown">
-                <button type="button" class="btn btn-red btn-logout">LOGOUT</button>
+                <button type="button" class="btn btn-red btn-logout hover-white-show-caret">LOGOUT<span class="dropdown-toggle"></span></button>
               </div>
             </div>
           </div>
@@ -101,7 +101,7 @@
                         <input class="form-control input-registration" aria-describedby="Address" placeholder="Address">
                         <div class="row bottom-field-row">
                           <input class="form-control input-registration input-half" aria-describedby="City" placeholder="City">
-                            <select class="form-control input-registration input-fourth show-menu-arrow" aria-describedby="State">
+                            <select class="form-control input-registration input-fourth" aria-describedby="State">
                               <option selected disabled hidden>State</option>
                               <option>AL</option>
                               <option>AK</option>
@@ -111,7 +111,7 @@
                         </div>
                       </div>
                       <div class="flex-col-end-center">
-                        <button type="submit" class="btn btn-red btn-registration">Submit</button>
+                        <button type="submit" class="btn btn-red btn-registration hover-white-show-caret">Submit<span class="dropdown-toggle"></span></button>
                       </div>
                     </div>
                   </form>
@@ -129,7 +129,7 @@
                         <input class="form-control input-registration bottom-field-row" aria-describedby="Password" placeholder="Password">
                       </div>
                       <div class="flex-col-end-center">
-                        <button type="submit" class="btn btn-red btn-registration">Submit</button>
+                        <button type="submit" class="btn btn-red btn-registration hover-white-show-caret">Submit<span class="dropdown-toggle"></span></button>
                       </div>
                     </div>
                   </form>
@@ -145,7 +145,7 @@
                         <input class="form-control input-registration bottom-field-row" aria-describedby="Access Code" placeholder="Access Code">
                       </div>
                       <div class="flex-col-end-center">
-                        <button type="submit" class="btn btn-red btn-registration">Submit</button>
+                        <button type="submit" class="btn btn-red btn-registration hover-white-show-caret">Submit<span class="dropdown-toggle"></span></button>
                       </div>
                     </div>
                   </form>
