add hover effects to all pages

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <div class="flex-row-spacebetween-end">
               <span class="welcome">Welcome, GUEST</span>
               <div class="dropdown">
-                <button type="button" class="btn btn-red btn-login" data-toggle="collapse" data-target="#login-form"
-                        aria-expanded="false" aria-controls="login-form">LOGIN</button>
+                <button type="button" class="btn btn-red btn-login hover-white-show-caret" data-toggle="collapse" data-target="#login-form"
+                        aria-expanded="false" aria-controls="login-form">LOGIN<span class="dropdown-toggle"></span></button>
               </div>
             </div>
           </div>
