--- a/course-detail.html
+++ b/course-detail.html
@@ -35,7 +35,7 @@
               <span class="welcome">Welcome, Ann Learner</span>
               <button type="button" class="btn btn-red btn-student-center">Student Center</button>
               <div class="dropdown">
-                <button class="btn btn-red btn-logout">LOGOUT</button>
+                <button type="button" class="btn btn-red btn-logout hover-white-show-caret">LOGOUT<span class="dropdown-toggle"></span></button>
               </div>
             </div>
           </div>
@@ -102,7 +102,7 @@
                         <span class="course-detail-text">
                           This is a brief sentence about online course offering.
                         </span>
-                        <button type="button" class="btn btn-red btn-course-detail">REGISTER</button>
+                        <button type="button" class="btn btn-red btn-course-detail hover-white-show-caret">REGISTER<span class="dropdown-toggle"></span></button>
                       </div>
                     </div>
                   </div>
@@ -119,7 +119,7 @@
                       <span class="course-detail-text">
                         This is a brief sentence about webinar offering.
                       </span>
-                      <button type="button" class="btn btn-red btn-course-detail">REGISTER</button>
+                      <button type="button" class="btn btn-red btn-course-detail hover-white-show-caret">REGISTER<span class="dropdown-toggle"></span></button>
                     </div>
                   </div>
                   <div role="button" class="btn btn-white btn-course flex-row-start" data-toggle="collapse" data-parent="#accordion" data-target="#onsite-training-collapse" aria-expanded="false" aria-controls="onsite-training-collapse">
@@ -135,7 +135,7 @@
                       <span class="course-detail-text">
                         This is a brief sentence about onsite training offering.
                       </span>
-                      <button type="button" class="btn btn-red btn-course-detail">REGISTER</button>
+                      <button type="button" class="btn btn-red btn-course-detail hover-white-show-caret">REGISTER<span class="dropdown-toggle"></span></button>
                     </div>
                   </div>
                 </div>
