--- a/webinar-onsite.html
+++ b/webinar-onsite.html
@@ -35,7 +35,7 @@
               <span class="welcome">Welcome, Ann Learner</span>
               <button type="button" class="btn btn-red btn-student-center">Student Center</button>
               <div class="dropdown">
-                <button type="button" class="btn btn-red btn-logout">LOGOUT</button>
+                <button type="button" class="btn btn-red btn-logout hover-white-show-caret">LOGOUT<span class="dropdown-toggle"></span></button>
               </div>
             </div>
           </div>
@@ -70,7 +70,7 @@
                     <textarea class="form-control input-message" aria-describedby="message" placeholder="I have questions about registering for this class."></textarea>
                   </div>
                   <div class="flex-col-end-center">
-                    <button type="submit" class="btn btn-red btn-registration">Submit</button>
+                    <button type="submit" class="btn btn-red btn-registration hover-white-show-caret">Submit<span class="dropdown-toggle"></span></button>
                   </div>
                 </div>
               </form>
