create register page

--- a/payment.html
+++ b/payment.html
@@ -65,7 +65,7 @@
                     Cost
                   </div>
                   <div class="card-body">
-                    <span id="cost">99.00</span>
+                    <span id="cost">$99.00</span>
                   </div>
                 </div>
               </div>
