fixes titles of pages

--- a/webinar-onsite.html
+++ b/webinar-onsite.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>St. Croix Sensory, Inc. Course Detail</title>
+    <title>St. Croix Sensory, Inc. Webinar/Onsite Registration</title>
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" />
   	<link rel="stylesheet" href="./css/style.css" />
 
